<resources>
    <string name="app_name">News</string>

    <string name="international_headline">International</string>

    <string name="newest_headline">Newest</string>

    <string name="search_title">Search</string>

    <string name="search_query">Searched for:</string>
    <string name="art_and_design">Art and design</string>
    <string name="australia_headline">Australia Headline</string>
    <string name="us_headline">US Headline</string>
    <string name="uk_headline">UK Headline</string>
    <string name="books">Books</string>
    <string name="business">Business</string>
    <string name="culture">Culture</string>
    <string name="education">Education</string>
    <string name="environment">Environment</string>
    <string name="fashion">Fashion</string>
    <string name="film">Film</string>
    <string name="football">Football</string>
    <string name="jobs">Jobs</string>
    <string name="life_and_style">Life and style</string>
    <string name="media">Media</string>
    <string name="politics">Politics</string>
    <string name="science">Science</string>
    <string name="sport">Sport</string>
    <string name="technology">Technology</string>
    <string name="travel">Travel</string>
    <string name="weather">Weather</string>
    <string name="filter_by">Filter by</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="relevance">Relevance</string>
    <string name="read_more">Read more</string>
    <string name="this_is_a_thumbnail">This is a thumbnail</string>
    <string name="no_internet">No internet connection. Tap to retry.</string>
    <string name="found_nothing">Found nothing</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>
